src/test/ui/impl-trait/recursive-type-alias-impl-trait-declaration-too-subtle.stderr
error: cannot implement trait on type alias impl trait
  --> $DIR/recursive-type-alias-impl-trait-declaration-too-subtle.rs:20:21
   |
LL |     impl PartialEq<(Foo, i32)> for Bar {
   |                     ^^^
   |
note: type alias impl trait defined here
  --> $DIR/recursive-type-alias-impl-trait-declaration-too-subtle.rs:16:16
   |
LL |     type Foo = impl PartialEq<(Foo, i32)>;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

